<resources>
    <string name="app_name">Fix O Krop</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
