<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <customfonts.MyEditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="35dp"
                android:background="#0000"
                android:drawableRight="@drawable/user1"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="16dp" />
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#45BD53"/>
            <customfonts.MyEditText
                android:id="@+id/etpassword"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginLeft="22dp"
                android:inputType="textPassword"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:drawableRight="@drawable/pasword"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#45BD53"/>
            <customfonts.MyTextView
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/angle"
                android:text="@string/sign_in"
                android:textSize="16dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="16dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="32dp"
                />
            <customfonts.MyTextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_account"
                android:textSize="16dp"
                android:textColor="#c4c5c9"
                android:gravity="center"
                android:paddingBottom="16dp"
                />
            <customfonts.MyTextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="25dp"
                android:textColor="#c4c5c9"
                android:gravity="center"
                android:layout_marginBottom="45dp"
                />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>